--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     },
     "require": {
         "symfony/symfony": "~2.7",
-        "pugx/shortid-doctrine": "1.*"
+        "doctrine/orm": "~2.5",
+        "pugx/shortid-doctrine": "1.*@dev"
     },
     "require-dev":{
         "phpunit/phpunit": "4.*"
@@ -33,6 +34,8 @@
             "dev-master": "1.0-dev"
         }
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "config": {
         "bin-dir": "bin"
     }
