--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,30 @@ php:
     - 5.6
     - 7.0
 
-before_script:
-    - composer install
+cache:
+    directories:
+        - $HOME/.composer/cache
 
+matrix:
+    fast_finish: true
+    include:
+        - php: 5.3
+          env: COMPOSER_FLAGS="--prefer-lowest"
+        - php: 5.6
+          env: SYMFONY_VERSION=2.3.*
+        - php: 5.6
+          env: SYMFONY_VERSION=2.7.*
+        - php: 5.6
+          env: SYMFONY_VERSION=2.8.*
+        - php: 5.6
+          env: SYMFONY_VERSION=3.0.*
+
+env:
+    global:
+        - SYMFONY_DEPRECATIONS_HELPER=weak
+
+before_script:
+    - composer self-update
+    - if [ "$SYMFONY_VERSION" != "" ]; then composer require "symfony/symfony:${SYMFONY_VERSION}" --no-update; fi;
+
+install: composer update $COMPOSER_FLAGS --prefer-dist --no-interaction
