--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "require": {
         "symfony/symfony": "~2.7|~3.0",
-        "pugx/shortid-doctrine": "1.*@dev"
+        "pugx/shortid-doctrine": "^0.1"
     },
     "require-dev":{
         "phpunit/phpunit": "4.*"
@@ -33,8 +33,6 @@
             "dev-master": "1.0-dev"
         }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "config": {
         "bin-dir": "bin"
     }
