--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,11 @@ matrix:
     fast_finish: true
     include:
         - php: 5.5
-          env: SYMFONY_VERSION=2.7.*
+          env: SYMFONY_VERSION=2.7.* COMPOSER_FLAGS="--prefer-lowest"
         - php: 5.6
           env: SYMFONY_VERSION=2.8.*
-        - php: 7.0
-          env: SYMFONY_VERSION=3.1.*
+        - php: 7.1
+          env: SYMFONY_VERSION=3.2.*
 
 env:
     global:
