--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,11 @@
         "issues": "https://github.com/pugx/shortid-doctrine-bundle/issues"
     },
     "require": {
-        "symfony/symfony": "~2.7|~3.0",
-        "pugx/shortid-doctrine": "^0.1"
+        "symfony/symfony": "^2.7|^3.1",
+        "pugx/shortid-doctrine": "^0.2"
     },
     "require-dev":{
-        "phpunit/phpunit": "4.*"
+        "phpunit/phpunit": "^5.7"
     },
     "autoload": {
         "psr-4": { "PUGX\\ShortidDoctrineBundle\\": "" }
