--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: php
 php:
     - 7.0
     - 7.1
+    - nightly
 
 cache:
     directories:
@@ -14,7 +15,11 @@ matrix:
         - php: 7.0
           env: SYMFONY_VERSION=2.7.* COMPOSER_FLAGS="--prefer-lowest"
         - php: 7.1
-          env: SYMFONY_VERSION=3.2.*
+          env: SYMFONY_VERSION=3.2.* SYMFONY_DEPRECATIONS_HELPER=strict
+        - php: nightly
+          env: SYMFONY_VERSION=3.3.* SYMFONY_DEPRECATIONS_HELPER=strict DEPENDENCIES=dev COMPOSER_FLAGS="--prefer-stable"
+    allow_failures:
+        - php: nightly
 
 env:
     global:
