--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
         "issues": "https://github.com/pugx/shortid-doctrine-bundle/issues"
     },
     "require": {
-        "symfony/symfony": "^2.7|^3.1",
-        "pugx/shortid-doctrine": "^0.2"
+        "pugx/shortid-doctrine": "^0.2",
+        "symfony/symfony": "^2.7|^3.1"
     },
     "require-dev":{
         "phpunit/phpunit": "^6.0"
@@ -37,6 +37,7 @@
         }
     },
     "config": {
-        "bin-dir": "bin"
+        "bin-dir": "bin",
+        "sort-packages": true
     }
 }
