--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,11 @@ matrix:
     fast_finish: true
     include:
         - php: 7.0
-          env: SYMFONY_VERSION=2.7.* COMPOSER_FLAGS="--prefer-lowest"
+          env: SYMFONY_VERSION=2.8.* COMPOSER_FLAGS="--prefer-lowest"
         - php: 7.1
-          env: SYMFONY_VERSION=3.3.* SYMFONY_DEPRECATIONS_HELPER=strict
-        - php: nightly
-          env: SYMFONY_VERSION=3.4.* SYMFONY_DEPRECATIONS_HELPER=strict DEPENDENCIES=dev COMPOSER_FLAGS="--prefer-stable"
+          env: SYMFONY_VERSION=3.4.* SYMFONY_DEPRECATIONS_HELPER=strict DEPENDENCIES=dev COMPOSER_FLAGS="--prefer-stable
+        - php: 7.2
+          env: SYMFONY_VERSION=4.0.* DEPENDENCIES=dev COMPOSER_FLAGS="--prefer-stable"
     allow_failures:
         - php: nightly
 
