--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,12 @@
     },
     "require": {
         "pugx/shortid-doctrine": "^0.3",
-        "symfony/config": "^2.7|^3.3",
-        "symfony/dependency-injection": "^2.7|^3.3",
-        "symfony/http-kernel": "^2.7|^3.3"
+        "symfony/config": "^2.8|^3.4|^4.0",
+        "symfony/dependency-injection": "^2.8|^3.4|^4.0",
+        "symfony/http-kernel": "^2.8|^3.4|^4.0"
     },
     "require-dev":{
-        "phpunit/phpunit": "^6.2"
+        "phpunit/phpunit": "^6.4"
     },
     "autoload": {
         "psr-4": { "PUGX\\ShortidDoctrineBundle\\": "src" }
