--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "symfony/http-kernel": "^2.8|^3.4|^4.0"
     },
     "require-dev":{
-        "phpunit/phpunit": "^6.4"
+        "phpunit/phpunit": "^6.4|^7.0"
     },
     "autoload": {
         "psr-4": { "PUGX\\ShortidDoctrineBundle\\": "src" }
