--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,14 @@
 {
     "name": "pugx/shortid-doctrine-bundle",
-    "description": "Symfony bundle for ShortId Doctrine type",
-    "keywords": ["symfony", "bundle", "shortid", "doctrine"],
-    "homepage": "http://pugx.org/",
     "type": "symfony-bundle",
+    "description": "Symfony bundle for ShortId Doctrine type",
+    "keywords": [
+        "symfony",
+        "bundle",
+        "shortid",
+        "doctrine"
+    ],
+    "homepage": "http://pugx.org/",
     "license": "MIT",
     "authors": [
         {
@@ -15,31 +20,35 @@
             "homepage": "https://github.com/pugx/shortid-doctrine-bundle"
         }
     ],
-    "support": {
-        "issues": "https://github.com/pugx/shortid-doctrine-bundle/issues"
-    },
     "require": {
         "pugx/shortid-doctrine": "^0.4",
-        "symfony/config": "^2.8|^3.4|^4.1",
-        "symfony/dependency-injection": "^2.8|^3.4|^4.1",
-        "symfony/http-kernel": "^2.8|^3.4|^4.1"
+        "symfony/config": "^2.8 || ^3.4 || ^4.1",
+        "symfony/dependency-injection": "^2.8 || ^3.4 || ^4.1",
+        "symfony/http-kernel": "^2.8 || ^3.4 || ^4.1"
     },
-    "require-dev":{
-        "phpunit/phpunit": "^6.4|^7.0|^8.0"
+    "require-dev": {
+        "phpunit/phpunit": "^6.4 || ^7.0 || ^8.0"
     },
-    "autoload": {
-        "psr-4": { "PUGX\\ShortidDoctrineBundle\\": "src" }
-    },
-    "autoload-dev": {
-        "psr-4": { "PUGX\\ShortidDoctrineBundle\\Tests\\": "tests" }
+    "config": {
+        "bin-dir": "bin",
+        "sort-packages": true
     },
     "extra": {
         "branch-alias": {
             "dev-master": "1.0-dev"
         }
     },
-    "config": {
-        "bin-dir": "bin",
-        "sort-packages": true
+    "autoload": {
+        "psr-4": {
+            "PUGX\\ShortidDoctrineBundle\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "PUGX\\ShortidDoctrineBundle\\Tests\\": "tests"
+        }
+    },
+    "support": {
+        "issues": "https://github.com/pugx/shortid-doctrine-bundle/issues"
     }
 }
