--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,12 @@
     ],
     "require": {
         "pugx/shortid-doctrine": "^0.5",
-        "symfony/config": "^2.8 || ^3.4 || ^4.1",
-        "symfony/dependency-injection": "^2.8 || ^3.4 || ^4.1",
-        "symfony/http-kernel": "^2.8 || ^3.4 || ^4.1"
+        "symfony/config": "^3.4 || ^4.2",
+        "symfony/dependency-injection": "^3.4 || ^4.2",
+        "symfony/http-kernel": "^3.4 || ^4.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.4 || ^7.0 || ^8.0"
+        "phpunit/phpunit": "^7.5 || ^8.2"
     },
     "config": {
         "bin-dir": "bin",
