--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ php:
     - 7.1
     - 7.2
     - 7.3
-    - 7.4snapshot
+    - 7.4
     - nightly
 
 cache:
@@ -15,11 +15,12 @@ matrix:
     fast_finish: true
     include:
         - php: 7.1
-          env: SYMFONY_VERSION=3.4.* COMPOSER_FLAGS="--prefer-lowest"
+          env: SYMFONY_VERSION=3.4.* COMPOSER_FLAGS="--prefer-lowest" SYMFONY_DEPRECATIONS_HELPER=strict
         - php: 7.3
-          env: SYMFONY_VERSION=4.3.*
+          env: SYMFONY_VERSION=4.4.* SYMFONY_DEPRECATIONS_HELPER=strict
+        - php: 7.4
+          env: SYMFONY_VERSION=5.0.*
     allow_failures:
-        - php: 7.4snapshot
         - php: nightly
 
 env:
@@ -29,6 +30,10 @@ env:
 
 before_script:
     - composer self-update
-    - if [ "$SYMFONY_VERSION" != "" ]; then composer require "symfony/symfony:${SYMFONY_VERSION}" --no-update; fi;
+    - |
+      if [ "$SYMFONY_VERSION" != "" ]; then
+           sed -ri 's/"symfony\/(.+)": "(.+)"/"symfony\/\1": "'$SYMFONY_VERSION'"/' composer.json;
+      fi;
+    - if [ "$DEPENDENCIES" = "dev" ]; then perl -pi -e 's/^}$/,"minimum-stability":"dev"}/' composer.json; fi;
 
 install: composer update $COMPOSER_FLAGS --no-interaction
