--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,14 @@
         }
     ],
     "require": {
+        "php": "^7.1",
         "pugx/shortid-doctrine": "^0.5",
-        "symfony/config": "^3.4 || ^4.3 || ^5.0",
-        "symfony/dependency-injection": "^3.4 || ^4.3 || ^5.0",
-        "symfony/http-kernel": "^3.4 || ^4.3 || ^5.0"
+        "symfony/config": "^3.4 || ^4.4 || ^5.0",
+        "symfony/dependency-injection": "^3.4 || ^4.4 || ^5.0",
+        "symfony/http-kernel": "^3.4 || ^4.4 || ^5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5 || ^8.4"
+        "phpunit/phpunit": "^7.5 || ^8.5 || ^9.0"
     },
     "config": {
         "bin-dir": "bin",
