--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,8 @@ jobs:
         - php: 7.3
           env: SYMFONY_VERSION=4.4.* SYMFONY_DEPRECATIONS_HELPER=strict
         - php: 7.4
-          env: SYMFONY_VERSION=5.1.*
-        - php: nightly
-          env: COMPOSER_FLAGS="--ignore-platform-reqs"
+          env: SYMFONY_VERSION=5.2.*
+        - php: 8.0
 
 cache:
     directories:
