--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,14 @@
         }
     ],
     "require": {
-        "php": "^7.1",
-        "pugx/shortid-doctrine": "^0.6",
+        "php": "^7.1 || ^8.0",
+        "pugx/shortid-doctrine": "^0.7",
         "symfony/config": "^3.4 || ^4.4 || ^5.0",
         "symfony/dependency-injection": "^3.4 || ^4.4 || ^5.0",
         "symfony/http-kernel": "^3.4 || ^4.4 || ^5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5 || ^8.5 || ^9.0"
+        "phpunit/phpunit": "^7.5 || ^8.5 || ^9.5"
     },
     "config": {
         "bin-dir": "bin",
@@ -36,7 +36,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0-dev"
+            "dev-master": "1.x-dev"
         }
     },
     "autoload": {
