--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 .git*            export-ignore
 .php_cs          export-ignore
 .travis.yml      export-ignore
+docs             export-ignore
 phpunit.xml.dist export-ignore
 README.md        export-ignore
 tests            export-ignore
