--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -63,12 +63,17 @@ jobs:
               uses: shivammathur/setup-php@v2
               with:
                   php-version: ${{ matrix.php }}
+            - name: install dev deps
               if: contains(matrix.symfony, '-dev')
-            - run: composer config minimum-stability dev
-            - run: composer config prefer-stable true
+              run: |
+                  composer config minimum-stability dev
+                  composer config prefer-stable true
+            - name: require specific Symfony version
               if: matrix.symfony
-            - run: sed -ri 's/"symfony\/(.+)": "(.+)"/"symfony\/\1": "'${{ matrix.symfony }}'"/' composer.json;
-              if: matrix.symfony
-            - run: composer update --no-interaction --no-progress --ansi ${{ matrix.composer_option }}
-            - run: vendor/bin/phpunit
+              run: |
+                  sed -ri 's/"symfony\/(.+)": "(.+)"/"symfony\/\1": "'${{ matrix.symfony }}'"/' composer.json;
+            - name: update vendors
+              run: composer update --no-interaction --no-progress --ansi ${{ matrix.composer_option }}
+            - name: run tests
+              run: bin/phpunit
 
