--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,9 @@
     "require": {
         "php": "^7.1 || ^8.0",
         "pugx/shortid-doctrine": "^0.7",
-        "symfony/config": "^3.4 || ^4.4 || ^5.0",
-        "symfony/dependency-injection": "^3.4 || ^4.4 || ^5.0",
-        "symfony/http-kernel": "^3.4 || ^4.4 || ^5.0"
+        "symfony/config": "^3.4 || ^4.4 || ^5.0 || ^6.0",
+        "symfony/dependency-injection": "^3.4 || ^4.4 || ^5.0 || ^6.0",
+        "symfony/http-kernel": "^3.4 || ^4.4 || ^5.0 || ^6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5 || ^8.5 || ^9.5"
