--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,14 @@
         }
     ],
     "require": {
-        "php": "^7.1 || ^8.0",
+        "php": "^7.4 || ^8.0",
         "pugx/shortid-doctrine": "^1.0",
-        "symfony/config": "^3.4 || ^4.4 || ^5.0 || ^6.0",
-        "symfony/dependency-injection": "^3.4 || ^4.4 || ^5.0 || ^6.0",
-        "symfony/http-kernel": "^3.4 || ^4.4 || ^5.0 || ^6.0"
+        "symfony/config": "^4.4 || ^5.4 || ^6.0",
+        "symfony/dependency-injection": "^4.4 || ^5.4 || ^6.0",
+        "symfony/http-kernel": "^4.4 || ^5.4 || ^6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5 || ^8.5 || ^9.5"
+        "phpunit/phpunit": "^8.5 || ^9.5"
     },
     "config": {
         "bin-dir": "bin",
