--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,6 +32,10 @@ jobs:
                       php: '8.1'
                     - description: 'No Symfony specified'
                       php: '8.2'
+                    - description: 'No Symfony specified'
+                      php: '8.3'
+                    - description: 'No Symfony specified'
+                      php: '8.4'
                     - description: 'Lowest deps'
                       php: '8.1'
                       composer_option: '--prefer-lowest'
@@ -41,11 +45,11 @@ jobs:
                       php: '8.1'
                       symfony: 5.4.*
                     - description: 'Symfony 6.4'
-                      php: '8.2'
+                      php: '8.3'
                       symfony: 6.4.*
                     - description: 'Latest'
-                      php: '8.3'
-                      symfony: 7.0.*
+                      php: '8.4'
+                      symfony: 7.1.*
         name: PHP ${{ matrix.php }} tests (${{ matrix.description }})
         steps:
             - name: Checkout
